# marka

./: .gitignore  README.md  package.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: autosave.js  editor-adapter.js  editor-logic.js  export-modal.js  export.js  file-ops.js  file-watcher.js  i18n.js  main.js  preview-renderer.js  preview-style.js  scroll-sync.js  settings.js  sidebar.js  style.css
frontend/tests/: editor-logic.test.mjs  preview-renderer.test.mjs  settings.test.mjs
lp/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
